--- a/Config.Wrapper.CLI.TestApp/Config.Wrapper.CLI.TestApp.csproj
+++ b/Config.Wrapper.CLI.TestApp/Config.Wrapper.CLI.TestApp.csproj
@@ -14,6 +14,6 @@
 	</ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\lib1\Config.Wrapper\Config.Wrapper.csproj" />
+        <ProjectReference Include="..\Config.Wrapper\Config.Wrapper.csproj" />
     </ItemGroup>
 </Project>
