--- a/Serilog.Wrapper.CLI.TestApp/Serilog.Wrapper.CLI.TestApp.csproj
+++ b/Serilog.Wrapper.CLI.TestApp/Serilog.Wrapper.CLI.TestApp.csproj
@@ -1,27 +1,24 @@
 <Project Sdk="Microsoft.NET.Sdk">
-	<PropertyGroup>
-		<OutputType>
-			Exe
-		</OutputType>
-		<TargetFramework>
-			net6.0
-		</TargetFramework>
-		<ImplicitUsings>
-			enable
-		</ImplicitUsings>
-		<Nullable>
-			enable
-		</Nullable>
+	
+  <PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+    <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
 	</PropertyGroup>
+
 	<ItemGroup>
 		<None Update="appsettings.json">
-			<CopyToOutputDirectory>
-				PreserveNewest
-			</CopyToOutputDirectory>
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		</None>
 	</ItemGroup>
+  
 	<ItemGroup>
-		<ProjectReference Include="..\lib2\Serilog.Wrapper\Serilog.Wrapper.csproj" />
-		<ProjectReference Include="..\lib1\Config.Wrapper\Config.Wrapper.csproj" />
+	  <ProjectReference Include="..\Serilog.Wrapper\Serilog.Wrapper.csproj" />
+	</ItemGroup>
+  
+	<ItemGroup>
+	  <PackageReference Include="Config.Wrapper" Version="1.0.0" />
 	</ItemGroup>
 </Project>
