--- a/CLIReader.Tests/CLIReader.Tests.csproj
+++ b/CLIReader.Tests/CLIReader.Tests.csproj
@@ -4,9 +4,12 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<Nullable>enable</Nullable>
 		<IsPackable>false</IsPackable>
+    <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
 	</PropertyGroup>
 
 	<ItemGroup>
+    <PackageReference Include="CLIHelper" Version="1.0.0" />
+    <PackageReference Include="CLIReader" Version="1.0.0" />
 		<PackageReference Include="Moq" Version="4.18.1"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0"/>
 		<PackageReference Include="xunit" Version="2.4.1"/>
@@ -20,7 +23,4 @@
 		</PackageReference>
 	</ItemGroup>
 
-	<ItemGroup>
-		<ProjectReference Include="..\DIHelper\DIHelper.csproj"/>
-	</ItemGroup>
 </Project>
