--- a/CLIReader/CLIReader.csproj
+++ b/CLIReader/CLIReader.csproj
@@ -4,11 +4,13 @@
 		<TargetFramework>net6.0</TargetFramework>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+    <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0"/>
+    <PackageReference Include="DIHelper" Version="1.0.0" />
+    <PackageReference Include="CLIHelper" Version="1.0.0" />
 		<PackageReference Include="Unity.Abstractions" Version="5.11.7"/>
 	</ItemGroup>
-  
+	
 </Project>
