upgrade to net 7.0

--- a/Connection.Builder/Connection.Builder.csproj
+++ b/Connection.Builder/Connection.Builder.csproj
@@ -1,20 +1,19 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <PackageId>Connection.Builder</PackageId>
-        <Version>1.0.0</Version>
-        <Authors>atari-monk</Authors>
-        <Company></Company>
-        <PackageTags>Connection builder</PackageTags>
-        <Description>
+  <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PackageId>Connection.Builder</PackageId>
+    <Version>1.0.0</Version>
+    <Authors>atari-monk</Authors>
+    <Company>
+    </Company>
+    <PackageTags>Connection builder</PackageTags>
+    <Description>
             Connection builder.
         </Description>
-    </PropertyGroup>
-
-    <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup>
+  </PropertyGroup>
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
 </Project>
