--- a/CLIFramework/CLIFramework.csproj
+++ b/CLIFramework/CLIFramework.csproj
@@ -1,18 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
     <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
-	</PropertyGroup>
-
-	<ItemGroup>
+  </PropertyGroup>
+  <ItemGroup>
     <PackageReference Include="DIHelper" Version="1.0.0" />
     <PackageReference Include="CLIHelper" Version="1.0.0" />
     <PackageReference Include="CRUDCommandHelper" Version="1.0.0" />
     <PackageReference Include="CLIWizardHelper" Version="1.0.0" />
-	  <PackageReference Include="Unity" Version="5.11.10" />
-	</ItemGroup>
-
+    <PackageReference Include="Unity" Version="5.11.10" />
+  </ItemGroup>
 </Project>
