--- a/CommandDotNet.Unity.Helper/CommandDotNet.Unity.Helper.csproj
+++ b/CommandDotNet.Unity.Helper/CommandDotNet.Unity.Helper.csproj
@@ -1,17 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-    <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-        <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
-    </PropertyGroup>
-    <ItemGroup>
-	    <ProjectReference Include="..\CommandDotNet.IoC.Unity\CommandDotNet.IoC.Unity.csproj" />
-	    <ProjectReference Include="..\CommandDotNet.Helper\CommandDotNet.Helper.csproj" />
-    </ItemGroup>
-  	<ItemGroup>
-  	  <PackageReference Include="CLIHelper" Version="1.0.0" />
-  	  <PackageReference Include="Config.Wrapper" Version="1.0.0" />
-  	  <PackageReference Include="DIHelper" Version="1.0.0" />
-  	</ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <TargetFramework>net7.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
+  </PropertyGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommandDotNet.IoC.Unity\CommandDotNet.IoC.Unity.csproj" />
+    <ProjectReference Include="..\CommandDotNet.Helper\CommandDotNet.Helper.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="CLIHelper" Version="1.0.0" />
+    <PackageReference Include="Config.Wrapper" Version="1.0.0" />
+    <PackageReference Include="DIHelper" Version="1.0.0" />
+  </ItemGroup>
 </Project>
