--- a/CommandDotNet.App.Tests/CommandDotNet.App.Tests.csproj
+++ b/CommandDotNet.App.Tests/CommandDotNet.App.Tests.csproj
@@ -6,7 +6,7 @@
     <IsPackable>false</IsPackable>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CommandDotNet.TestTools" Version="5.0.1" />
+    <PackageReference Include="CommandDotNet.TestTools" Version="6.0.2" />
     <PackageReference Include="FluentAssertions" Version="6.10.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.1" />
     <PackageReference Include="xunit" Version="2.4.2" />
@@ -20,6 +20,6 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\CommandDotNet.Examples.App\CommandDotNet.Examples.App.csproj" />
+    <ProjectReference Include="..\CommandDotNet.App\CommandDotNet.App.csproj" />
   </ItemGroup>
 </Project>
