--- a/CommandDotNet.App/CommandDotNet.App.csproj
+++ b/CommandDotNet.App/CommandDotNet.App.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CommandDotNet" Version="6.0.5" />
+    <PackageReference Include="CommandDotNet" Version="7.0.2" />
   </ItemGroup>
 </Project>
