--- a/CommandDotNet.Helper/CommandDotNet.Helper.csproj
+++ b/CommandDotNet.Helper/CommandDotNet.Helper.csproj
@@ -6,11 +6,11 @@
     <RestoreSources>$(RestoreSources);C:\atari-monk\nugets;https://api.nuget.org/v3/index.json</RestoreSources>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CommandDotNet" Version="6.1.0-alpha.repl" />
-    <PackageReference Include="CommandDotNet.DataAnnotations" Version="2.0.3" />
-    <PackageReference Include="CommandDotNet.NameCasing" Version="3.0.1" />
-    <PackageReference Include="Config.Wrapper" Version="1.0.0" />
     <PackageReference Include="DIHelper" Version="1.0.0" />
-    <PackageReference Include="Serilog" Version="2.11.0" />
+    <PackageReference Include="Config.Wrapper" Version="1.0.0" />
+    <PackageReference Include="CommandDotNet" Version="7.0.2" />
+    <PackageReference Include="CommandDotNet.DataAnnotations" Version="3.0.2" />
+    <PackageReference Include="CommandDotNet.NameCasing" Version="4.0.2" />
+    <PackageReference Include="Serilog" Version="2.12.0" />
   </ItemGroup>
 </Project>
