--- a/Better.Console.Tables.TestApp/Better.Console.Tables.TestApp.csproj
+++ b/Better.Console.Tables.TestApp/Better.Console.Tables.TestApp.csproj
@@ -15,9 +15,9 @@
     <PackageReference Include="DataToTable" Version="1.0.0" />
     <PackageReference Include="BetterConsoleTables" Version="2.0.4-rc1" />
     <PackageReference Include="Unity" Version="5.11.10" />
-    <PackageReference Include="CommandDotNet" Version="6.1.0-alpha.repl" />
-    <PackageReference Include="CommandDotNet.DataAnnotations" Version="2.0.3" />
-    <PackageReference Include="CommandDotNet.NameCasing" Version="3.0.1" />
+    <PackageReference Include="CommandDotNet" Version="7.0.2" />
+    <PackageReference Include="CommandDotNet.DataAnnotations" Version="3.0.2" />
+    <PackageReference Include="CommandDotNet.NameCasing" Version="4.0.2" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.3" />
     <PackageReference Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="7.0.0" />
