--- a/CLIHelper/CLIHelper.csproj
+++ b/CLIHelper/CLIHelper.csproj
@@ -9,7 +9,7 @@
     <PackageReference Include="DIHelper" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.0.0" />
     <PackageReference Include="Unity.Abstractions" Version="5.11.7" />
-    <PackageReference Include="CommandDotNet" Version="6.1.0-alpha.repl" />
-    <PackageReference Include="CommandDotNet.TestTools" Version="5.0.1" />
+    <PackageReference Include="CommandDotNet" Version="7.0.2" />
+    <PackageReference Include="CommandDotNet.TestTools" Version="6.0.2" />
   </ItemGroup>
 </Project>
